src/test/deca/context/valid/personalTests/comparaison_limite.deca
// Test cmp limite

{
    1.0 > 2;
    1 > 2.0;
    true == true;
}