src/test/deca/context/invalid/personalTests/binaryShift_float_invalide.deca
{
   int a = 8 << 1.0;
}